拼接参数